@@ -1,3 +1,8 @@
+2012-06-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/groups/modu_group_list.php: Fixed module update when a 
+	module group is deleted.
+
 2012-06-20  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_reporting.php: Added missed 
